UI Improvements (#71)
* Publis plugin UI

* Better storage browser ui (maybe)

* Better storage browser ui (maybe)

* Better storage browser ui (maybe)

* Better storage browser ui (maybe)

* Missing dependency

* * Do not restart https server if the ssl is already present or it's for localhost
* Report only first DNS call, dns-report plugin
* Correct dataset specifications for SHOW WARNING in mysql

* * Keep accordions opened

* * Rewrite plugin

* * Rewrite plugin

* * Rewrite plugin

* * Rewrite plugin

* * Rewrite plugin

* * Rewrite plugin

* * Rewrite plugin

* * Rewrite plugin

* * Rewrite plugin

* * Browse data on recording

* * Targets fix

* * Targets fix

* * Targets fix

* * Show recordings

* * Show recordings

* * Decent ui for replaying

* * Decent ui for replaying

* * Decent ui for editing mocks

* * Reordering

* * Reordering

* * Reordering

* * Cleanup

* * Cleanup